css/default.css
body {
	background: #fff;
	color: #333;
	font: normal normal 16px/1.1625em Calibri, "Lucida Grande", Helvetica, Tahoma, Arial, Verdana, sans-serif;
	*font-size: 100%; /* normalize IE */
	line-height: 1.5em;
	margin: 0;
	padding: 0;
}
h1, h2, h3, h4, h5, h6 {
	font-family: Cambria, Georgia, Calibri, "Lucida Grande", Helvetica, Tahoma, Arial, Verdana, sans-serif;
	line-height: 1.5em;
}

@media (prefers-color-scheme: dark) {
	background: #000;
	color: #ccc
}

